editted endpoint but fail

--- a/Sign_up.html
+++ b/Sign_up.html
@@ -25,7 +25,8 @@
         <div>
             <button type="submit" name="log" id='log'>Sign Up!</button>
         </div>
-        <br><br>   
+        <br><br>    
+        <a href="./index.html">Already had a account? Click here to login!</a>    
     </form>   
 </div>    
 </body>    
